@@ -12,6 +12,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (5.3-dev, SVN trunk):
 ------------------------------------
 
+- Added getUnits() methods to projectionObj in Mapscript (#2798)
+
 - Improved Tag parsing in template code. (#2781)
 
 - Added hashtable object and metadata methods for php-mapscript (#2773)
